...
    },
    "actual_health" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gemessene Kapazität"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Actual Capacity"
...
    },
    "diagnostic_result" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diagnoseergebnis"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diagnostic Result"
...
    },
    "log_date" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Protokolldatum"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Log Date"
...
